<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/arrow_detail"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints" >

        <TextView
            android:id="@+id/textView_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="170dp"
            android:textColor="@color/white"
            android:text="@string/text_create_acc"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="22sp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/log_text"
            android:textColor="@color/white"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_text"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"/>

        <EditText
            android:id="@+id/pass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/pass_text"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"/>


        <Button
            android:id="@+id/button_reg"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/another"
            android:gravity="center"
            android:onClick="onClickReg"
            android:text="@string/btn_reg"
            android:textColor="@color/magenta"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/link_to_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textColor="#FDFDFD"
            android:textSize="20sp"
            android:onClick="onClickGoAuth"
            android:text="Войти в Аккаунт"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>